easier if condition; typos. All not relevant though

--- a/backend/app/templates/base.html
+++ b/backend/app/templates/base.html
@@ -3,7 +3,7 @@
 {% import "bootstrap/fixes.html" as fixes %}
 
 {% block title %}
-    Welcom to Teleschocken
+    Welcome to Teleschocken
 {% endblock %}
 {% block navbar %}
     <div class="row col-md-offset-1">
