poor mobile hint

--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -77,6 +77,7 @@
           <div class="row">
             <div class="col-md-9">
               <ul>
+                <li>Nicht mobiel angepasst. Der größte Spielspaß besteht am Tablet oder PC / Laptop</li>
                 <li>Der Spieler, der das Spiel erzeugt ist auch die Bank und muss alle Chips verteilen</li>
                 <li>Wenn ein Zug vor dem dritten Würfeln beendet werden soll, bitte "Ende" klicken</li>
                 <li>Zu jeden Zeitpunkt kann auf bzw zu gedeckt werden.</li>
