--- a/backend/app/templates/base.html
+++ b/backend/app/templates/base.html
@@ -2,16 +2,16 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% import "bootstrap/fixes.html" as fixes %}
 
-{% block title %}
-    Welcome to Teleschocken
-{% endblock %}
+
+
+{% include "header.html" %}
+
 {% block navbar %}
     <div class="row col-md-offset-1">
       <div class="col-md-12">
         <h3>Tele-Schocken Beta</h3>
       </div>
     </div>
-    <meta name="description" content="Kostenlos mit Freunden Schocken. Spiele Jule, Mörkeln, Knobeln, Maxen oder Meiern gemeinsam online mit deinen Freunden."/>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style.css') }}">
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/dice.css') }}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
