--- a/backend/app/templates/base.html
+++ b/backend/app/templates/base.html
@@ -17,7 +17,13 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 {% endblock %}
 
-
+{% block content %}
+<main>
+  <div class="header-img">
+    <img alt="Bone Dice 19th Century" title="Bone Dice 19th Century" style="width:100%; height:auto;" src="{{ url_for('static',filename='dice2.png') }}">
+  </div>
+</main>
+{% endblock %}
 
 {% block scripts %}
 <script type=text/javascript src="{{
