--- a/backend/app/templates/game.html
+++ b/backend/app/templates/game.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<main>
-    <div class="header-img"></div>
-</main>
+{{ super() }}
 
 <div class="row col-md-offset-1 col-md-6" style="height:90px;">
     <h1>Spiel kann vom Admin gestartet werden</h1>
