--- a/backend/app/templates/gameplay.html
+++ b/backend/app/templates/gameplay.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<main>
-    <div class="header-img"></div>
-</main>
+{{ super() }}
 
 <div class="row ">
   <div class="col-md-2 col-md-offset-1">
