--- a/backend/app/templates/header.html
+++ b/backend/app/templates/header.html
@@ -1,5 +1,5 @@
 
 <head>
-  <title>Welcome to Teleschocken. Spiele online gemeinsam mit freunden Schocken</title>
+  <title>Teleschocken! Spiele online gemeinsam mit freunden</title>
   <meta name="description" content="Kostenlos mit Freunden Schocken. Spiele Jule, Mörkeln, Knobeln, Maxen oder Meiern gemeinsam online mit deinen Freunden."/>
 </head>
