--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -13,6 +13,11 @@
         <div class="col-md-5 col-md-offset-1">
           <div class="row">
             <div class="col-md-12">
+              <p>Egal ob <b>Schocken</b>, <b>Jule</b>,  <b>Mörkeln</b>, <b>Knobeln</b>,  <b>Maxen</b> oder <b>Meiern</b> hier bist du richtig!</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
               <h2>Spiel erzeugen</h2>
               <label for="adminname">Name</label>
               <input  type="text" id="adminname" value="">
@@ -73,14 +78,14 @@
           <div class="row">
             <div class="col-md-9">
               <ul>
-                <li>Nicht mobiel angepasst. Der größte Spielspaß besteht am Tablet oder PC / Laptop</li>
-                <li>Der Spieler, der das Spiel erzeugt ist auch die Bank und muss alle Chips verteilen</li>
+                <li>Nicht mobiel angepasst. Der größte Spielspaß besteht am Tablet oder PC / Laptop.</li>
+                <li>Der Spieler, der das Spiel erzeugt ist auch die Bank und muss alle Chips verteilen (Dies ermöglicht flexible Regeln)!</li>
                 <li>Wenn ein Zug vor dem dritten Würfeln beendet werden soll, bitte "Ende" klicken</li>
                 <li>Zu jeden Zeitpunkt kann auf bzw zu gedeckt werden.</li>
-                <li>Rausgestellte Würfel sind aufgedeckt</li>
+                <li>Rausgestellte Würfel sind aufgedeckt.</li>
                 <li>Die erste und zweite Hälfte wird nicht mehr ausgespielt. (Wartzezeit für die restlichen Spieler zu groß)</li>
-                <li>Der Spieler der bei einer Runde bereits gewonnen hat (0 Chips), muss jedes Mal auf "Ende" klicken wenn er dran wäre (ermöglicht wieder Einwerfen)</li>
-                <li>Der Code ist frei verfügbar. Wenn euch das Spiel gefällt liked es auf Github. Wenn ihr Anregungen habt oder Fehler findet meldet dies auch via Github</li>
+                <li>Der Spieler der bei einer Runde bereits gewonnen hat (0 Chips), muss jedes Mal auf "Ende" klicken wenn er dran wäre (ermöglicht wieder Einwerfen).</li>
+                <li>Der Code ist frei verfügbar. Wenn euch das Spiel gefällt liked es auf Github. Wenn ihr Anregungen habt oder Fehler findet meldet dies auch via Github.</li>
               </ul>
             </div>
           </div>
