--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -13,7 +13,7 @@
         <div class="col-md-5 col-md-offset-1">
           <div class="row">
             <div class="col-md-12">
-              <p>Egal ob <b>Schocken</b>, <b>Jule</b>,  <b>Mörkeln</b>, <b>Knobeln</b>,  <b>Maxen</b> oder <b>Meiern</b> hier bist du richtig!</p>
+              <p>Egal ob du <b>Schocken</b>, <b>Jule</b>,  <b>Mörkeln</b>, <b>Knobeln</b>,  <b>Maxen</b> oder <b>Meiern</b> willst, hier bist du richtig!</p>
             </div>
           </div>
           <div class="row">
