--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -81,7 +81,7 @@
                 <li>Nicht mobiel angepasst. Der größte Spielspaß besteht am Tablet oder PC / Laptop.</li>
                 <li>Der Spieler, der das Spiel erzeugt ist auch die Bank und muss alle Chips verteilen (Dies ermöglicht flexible Regeln)!</li>
                 <li>Wenn ein Zug vor dem dritten Würfeln beendet werden soll, bitte "Ende" klicken</li>
-                <li>Zu jeden Zeitpunkt kann auf bzw zu gedeckt werden.</li>
+                <li>Zu jeden Zeitpunkt kann auf bzw. zu gedeckt werden.</li>
                 <li>Rausgestellte Würfel sind aufgedeckt.</li>
                 <li>Die erste und zweite Hälfte wird nicht mehr ausgespielt. (Wartzezeit für die restlichen Spieler zu groß)</li>
                 <li>Der Spieler der bei einer Runde bereits gewonnen hat (0 Chips), muss jedes Mal auf "Ende" klicken wenn er dran wäre (ermöglicht wieder Einwerfen).</li>
