--- a/backend/app/templates/game.html
+++ b/backend/app/templates/game.html
@@ -10,11 +10,11 @@
     <h3 id="admin"></h3>
 </div>
 <div class="row col-md-offset-1 col-md-6" >
-    <h3>Verteile diesen Link an alle Mitspieler</h3>
+    <h3>Verteile diesen Link an alle Mitspieler.</h3>
     <h2 id="link">http://tele-schocken.de/game_waiting/{{game.UUID}}</h2>
 </div>
 <div class="row col-md-offset-1 col-md-6" >
-    <h3>Alternativ verteile diese ID an alle Mitspieler</h3>
+    <h3>Alternativ verteile diese ID an alle Mitspieler.</h3>
     <p id="admin_id" hidden>{{ game.admin_user_id }}</p>
 </div>
 <div class="row col-md-offset-1 col-md-6">
@@ -22,7 +22,7 @@
 </div>
 <div class="row col-md-offset-1">
   <div class="col-md-12">
-    <h3>Zum Beitreten Spielname angeben</h3>
+    <h3>Zum Beitreten Spielname angeben.</h3>
   </div>
 </div>
 <div class="row col-md-offset-1">
