--- a/backend/app/templates/header.html
+++ b/backend/app/templates/header.html
@@ -2,4 +2,5 @@
 <head>
   <title>Teleschocken! Spiele online gemeinsam mit freunden</title>
   <meta name="description" content="Kostenlos mit Freunden Schocken. Spiele Jule, Mörkeln, Knobeln, Maxen oder Meiern gemeinsam online mit deinen Freunden."/>
+  <meta name="google-site-verification" content="fjsoRMBZ8Q-7Xs315KcRj6u8OSboQj3-BmrPO0UK0qo" />
 </head>
