--- a/backend/app/static/styles/style.css
+++ b/backend/app/static/styles/style.css
@@ -15,11 +15,12 @@ table {
 .buttongreen {
   background-color: #4CAF50;
   border-radius: 10px;
+  opacity: 1;
 } /* Green */
 
 .buttongray {
   background-color: #ffffff;
-  opacity: .4;
+  opacity: 1;
   border-radius: 10px;
 } /* Gray */
 
@@ -76,7 +77,7 @@ table {
  left: 0%;
 
  background-color: #ffffff;
- opacity: .4;
+ opacity: 0.0;
  width: 100%;
  height: 100%;
  border: none;
@@ -100,7 +101,7 @@ table {
  top: 0%;
  left: 0%;
  background-color: #ffffff;
- opacity: .4;
+ opacity: 0.0;
  width: 100%;
  height: 100%;
  border: none;
