--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -19,53 +19,14 @@
           <div class="row">
             <div class="col-md-12">
               <h2>Spiel erzeugen</h2>
-              <label for="adminname">Name</label>
+              <label for="adminname">Spielername</label>
               <input  type="text" id="adminname" value="">
-              <button onclick="createGame()">Erzeugen</button>
+              <button class="btn btn-primary" onclick="createGame()">Erzeugen</button>
             </div>
           </div>
           <div class="row">
             <div class="col-md-12">
-              <div class="row">
-                <div class="col-md-12">
-                  <h2>Spiel beitreten</h2>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-4">
-                  <div class="row">
-                    <div class="col-md-12">
-                      <label for="UUID">Spiel ID</label>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-md-12">
-                      <input  type="text" id="UUID" value="">
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="row">
-                    <div class="col-md-12">
-                      <label for="Name">Name</label>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-md-12">
-                      <input  type="text" id="Name" value="">
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="row" style="height:25px;">
-                  </div>
-                  <div class="row" >
-                    <div class="col-md-12">
-                      <button onclick="joinGame()">Beitreten</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
+              <p>(Link zum Verteilen an die Mitspieler wird generiert)</p>
             </div>
           </div>
         </div>
