--- a/backend/app/templates/gameplay.html
+++ b/backend/app/templates/gameplay.html
@@ -37,8 +37,8 @@
   <div class="col-md-2 col-md-offset-1">
     <div class="col-md-8">
       <div class="containerturner" id='startgame_id'>
-       <img src="{{ url_for('static', filename = 'throw_the_dice.svg')}}" alt="throw the dice" title="Würfeln">
-       <button onclick="dice()" class="btn"></button>
+       <img src="{{ url_for('static', filename = 'throw_the_dice.svg')}}" alt="throw the dice">
+       <button onclick="dice()" class="btn" title="Würfeln"></button>
       </div>
     </div>
     <div class="col-md-2">
@@ -48,14 +48,14 @@
   <div class="col-md-3">
     <div class="col-md-6">
       <div class="containercup">
-       <img src="{{ url_for('static', filename = 'pulldiceup.svg')}}" alt="pull dice cup up" title="Aufdecken">
-       <button onclick="pullup()" class="btn"></button>
+       <img src="{{ url_for('static', filename = 'pulldiceup.svg')}}" alt="pull dice cup up" >
+       <button onclick="pullup()" class="btn" title="Aufdecken"></button>
       </div>
     </div>
     <div class="col-md-6">
       <div class="containercup">
-       <img src="{{ url_for('static', filename = 'pulldicedown.svg')}}" alt="pull dice cup down" title="Zudecken">
-       <button onclick="pulldown()" class="btn"></button>
+       <img src="{{ url_for('static', filename = 'pulldicedown.svg')}}" alt="pull dice cup down" >
+       <button onclick="pulldown()" class="btn" title="Zudecken"></button>
       </div>
     </div>
   </div>
@@ -94,14 +94,14 @@
   <div class="col-md-3">
     <div id='2_6er' class="col-md-6" hidden>
       <div class="containerturner">
-       <img src="{{ url_for('static', filename = '2_6er.svg')}}" alt="change two 6er against one 1er" title="6er drehen">
-       <button  onclick="turn1()" class="btn"></button>
+       <img src="{{ url_for('static', filename = '2_6er.svg')}}" alt="change two 6er against one 1er" >
+       <button  onclick="turn1()" class="btn" title="6er drehen"></button>
       </div>
     </div>
     <div id='3_6er' class="col-md-6" hidden>
       <div class="containerturner">
-       <img src="{{ url_for('static', filename = '3_6er.svg')}}" alt="change three 6er against two 1er" title="6er drehen">
-       <button  onclick="turn2()" class="btn"></button>
+       <img src="{{ url_for('static', filename = '3_6er.svg')}}" alt="change three 6er against two 1er" >
+       <button  onclick="turn2()" class="btn" title="6er drehen"></button>
       </div>
     </div>
   </div>
