--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -44,7 +44,7 @@
                 <li>Wenn ein Zug vor dem dritten Würfeln beendet werden soll, bitte "Ende" klicken</li>
                 <li>Zu jeden Zeitpunkt kann auf bzw. zu gedeckt werden.</li>
                 <li>Rausgestellte Würfel sind aufgedeckt.</li>
-                <li>Die erste und zweite Hälfte wird nicht mehr ausgespielt. (Wartzezeit für die restlichen Spieler zu groß)</li>
+                <li>Die erste und zweite Hälfte wird nicht mehr ausgespielt. (Wartezeit für die restlichen Spieler zu groß)</li>
                 <li>Der Spieler der bei einer Runde bereits gewonnen hat (0 Chips), muss jedes Mal auf "Ende" klicken wenn er dran wäre (ermöglicht wieder Einwerfen).</li>
                 <li>Der Code ist frei verfügbar. Wenn euch das Spiel gefällt liked es auf Github. Wenn ihr Anregungen habt oder Fehler findet meldet dies auch via Github.</li>
               </ul>
