--- a/backend/app/templates/game.html
+++ b/backend/app/templates/game.html
@@ -83,10 +83,22 @@
     <button class="btn btn-primary" id='startgame_id'onclick="startGame()" disabled>Starten</button>
   </div>
 </div>
-<div class="row col-md-offset-1 col-md-10" >
+<div class="row col-md-offset-1 col-md-10">
     <h3>Verteile diesen Link an alle Mitspieler:</h3>
-    <h3 id="link">http://tele-schocken.de/game_waiting/{{game.UUID}}</h3>
 </div>
+<div class="row">
+  <div class="col-md-offset-1 col-md-4" >
+    <div class="input-group mb-6">
+      <input id="link_input" type="text" size="80" class="form-control" value="http://tele-schocken.de/game_waiting/{{game.UUID}}">
+      <div class="input-group-btn">
+        <button onclick="coppy()" class="btn btn-outline-secondary" type="button">Koppieren</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
 <div class="row col-md-offset-1 col-md-10" >
     <p id="admin_id" hidden>{{ game.admin_user_id }}</p>
 </div>
@@ -106,6 +118,22 @@
 {% block scripts %}
 {{ super() }}
 <script>
+  // https://www.w3schools.com/howto/howto_js_copy_clipboard.asp
+  function coppy() {
+  /* Get the text field */
+  var copyText = document.getElementById("link_input");
+
+  /* Select the text field */
+  copyText.select();
+  copyText.setSelectionRange(0, 99999); /*For mobile devices*/
+
+  /* Copy the text inside the text field */
+  document.execCommand("copy");
+
+  /* Alert the copied text */
+  //alert("Copied the text: " + copyText.value);
+}
+
   function joinGame(){
     var user = document.getElementById('Name');
     var game = document.getElementById('UUID');
