--- a/backend/app/templates/game.html
+++ b/backend/app/templates/game.html
@@ -91,7 +91,7 @@
     <div class="input-group mb-6">
       <input id="link_input" type="text" size="80" class="form-control" value="http://tele-schocken.de/game_waiting/{{game.UUID}}">
       <div class="input-group-btn">
-        <button onclick="coppy()" class="btn btn-outline-secondary" type="button">Koppieren</button>
+        <button onclick="coppy()" class="btn btn-outline-secondary" type="button">kopieren</button>
       </div>
     </div>
   </div>
