--- a/backend/app/templates/gameplay.html
+++ b/backend/app/templates/gameplay.html
@@ -166,10 +166,10 @@
     </div>
   </div>
   <div class="row ">
-    <div class="col-md-1 col-md-offset-1">
+    <div class="col-md-2 col-md-offset-1">
       <label for="stack_count_id">Anzahl:</label>
       <input type="number" id="stack_count_id" name="stack_count_id"
-         min="0" max="13" style='width:100%'>
+         min="0" max="13">
     </div>
     <div class="col-md-2">
       <label for="transfer_source">Von:</label>
