--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -64,6 +64,44 @@
           </div>
         </div>
     </div>
+    <br/>
+    <hr>
+    <div class="row">
+      <div class="col-md-11 col-md-offset-1">
+        <h3>Leitfaden</h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-9 col-md-offset-1">
+        <ul>
+          <li>Wenn man an der Reihe ist zu würfeln wird der Würfelbutton grün hinterlegt</li>
+          <li>Der blau hinterlegte Spieler hat die Runde begonnen</li>
+          <li>Die Würfel, die raus gelegt werden müssen abgehakt werden</li>
+          <li>Nur der Admin hat die Felder zum Verteilen der Chips</li>
+          <li>Die Button zum 6er drehen erscheien nur wenn in einem Wurf mindestens 2 6er enthalten sind</li>
+          <li>Im oberen Breich werden Nachrichten in rot angezeigt, welche durch das Spiel leiten</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-11 col-md-offset-1 example_img">
+        <img alt="Gameplay" title="Spielaufbau" style="width:100%; height:auto;" src="{{ url_for('static',filename='Gameplay01.png') }}">
+      </div>
+    </div>
+    <hr>
+    <div class="row">
+      <div class="col-md-11 col-md-offset-1 example_img">
+        <img alt="Gameplay" title="Spielaufbau" style="width:100%; height:auto;" src="{{ url_for('static',filename='Gameplay03.png') }}">
+      </div>
+    </div>
+    <hr>
+    <div class="row">
+      <div class="col-md-11 col-md-offset-1 example_img">
+        <img alt="Gameplay" title="Spielaufbau" style="width:100%; height:auto;" src="{{ url_for('static',filename='Gameplay02.png') }}">
+      </div>
+    </div>
+
 </div>
 
 
