--- a/backend/app/static/styles/style.css
+++ b/backend/app/static/styles/style.css
@@ -24,6 +24,10 @@ table {
   border-radius: 10px;
 } /* Gray */
 
+br {
+   display: block;
+   margin: 10px 0;
+}
 
 .spin {
 }
@@ -113,6 +117,9 @@ table {
   background-size: cover;
 }
 
+.example_img {
+  background-size: cover;
+}
 
 #marked {
   color: red;
