--- a/backend/app/templates/index.html
+++ b/backend/app/templates/index.html
@@ -19,9 +19,16 @@
           <div class="row">
             <div class="col-md-12">
               <h2>Spiel erzeugen</h2>
-              <label for="adminname">Spielername</label>
-              <input  type="text" id="adminname" value="">
-              <button class="btn btn-primary" onclick="createGame()">Erzeugen</button>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4" >
+              <div class="input-group mb-6">
+                <input id="adminname" placeholder="Spielername" type="text" size="20" class="form-control" >
+                <div class="input-group-btn">
+                  <button class="btn btn-primary btn-outline-secondary" type="button" onclick="createGame()">Erzeugen</button>
+                </div>
+              </div>
             </div>
           </div>
           <div class="row">
